<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@mipmap/logo_up"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@mipmap/times" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@mipmap/logo_down" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="?attr/theme_color"
            android:textSize="30dp"
            android:layout_marginTop="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/author_info"
            android:textSize="20dp"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/author_number"
            android:textSize="18dp"
            android:textColor="#000000" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/respect"
            android:textColor="?attr/theme_color"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>