<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/popupwindow_background">

    <RelativeLayout
        android:id="@+id/preference_setting_window_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/theme_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/preference_select_window_title"
            android:textColor="#FFFF"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/preference_window_exit_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@mipmap/exit_icon"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/preference_setting_core"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/preference_setting_window_title">
        <TableRow
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="显示背景"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="?attr/theme_color" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <com.example.step_music_player.UI.switch_button
                    android:id="@+id/select_background_btn"
                    android:layout_width="@dimen/width"
                    android:layout_height="@dimen/height"
                    android:layout_gravity="center"
                    android:gravity="center"/>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="摇一摇切歌"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="?attr/theme_color" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <com.example.step_music_player.UI.switch_button
                android:id="@+id/select_shake_btn"
                android:layout_width="@dimen/width"
                android:layout_height="@dimen/height"
                android:layout_gravity="center"
                android:gravity="center"/>

            </LinearLayout>

        </TableRow>
 </TableLayout>

    <LinearLayout
        android:layout_below="@+id/preference_setting_core"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/submit_preference_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/btn_background"
                android:layout_marginRight="80dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/confirm_text"
                android:textColor="#FFFF"
                android:textSize="20sp"
                android:layout_marginEnd="80dp" />

            <Button
                android:id="@+id/reset_preference_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/btn_background"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/reset_text"
                android:textColor="#FFFF"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>